plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.8'
	id 'io.spring.dependency-management' version '1.1.7'}

group = 'ru.random-walk'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'com.vladmihalcea:hibernate-types-52:2.11.1'
	implementation 'com.github.mwiede:jsch:0.2.17'
	implementation 'org.locationtech.jts:jts-core:1.19.0'
	implementation 'org.postgresql:postgresql:42.6.0'
	implementation 'io.rest-assured:rest-assured'

}

tasks.named('test') {
	jvmArgs = [
			"-Xmx2g",
			"-Xms1g",
			"-Xss512k",
			"-Dfile.encoding=UTF-8",
			"-Djavax.net.ssl.trustStoreType=jks",
			"-Djavax.net.ssl.trustStore=",
			"-Djavax.net.ssl.trustStorePassword="
	]
	def userCount = gradle.startParameter.systemPropertiesArgs.get('userCount')
	if (userCount != null) {
		systemProperty 'userCount', userCount
	}
	useJUnitPlatform() {
		def includedTags = project.hasProperty('includeTags') ? project.property('includeTags') : null
		def excludedTags = project.hasProperty('excludeTags') ? project.property('excludeTags') : null

		if (includedTags) {
			includeTags(includedTags)
		}
		if (excludedTags) {
			excludeTags(excludedTags)
		}
	}
}
